force-app/main/default/objects/Evidence_Bundle__c/Evidence_Bundle__c.object-meta.xml
<CustomObject>
    <description>A sealed export of decisions with chain proof, scoped to a matter. Private OWD; the matter team gets access through manual sharing when the bundle is assembled.</description>
    <label>Evidence Bundle</label>
    <nameField>
        <displayFormat>EB-{0000}</displayFormat>
        <label>Bundle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evidence Bundles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>