force-app/main/default/objects/Evidence_Bundle__c/fields/Anchor_Reference__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Reference__c</fullName>
    <label>Anchor Reference</label>
    <description>Pointer to the Chain_Anchor__b daily terminal hash that backs this bundle's proof.</description>
    <inlineHelpText>The daily anchor this bundle's proof is linked to.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>