force-app/main/default/objects/Evidence_Bundle__c/fields/Bundle_Number__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Number__c</fullName>
    <label>Bundle Number</label>
    <description>Human-readable identifier for the evidence bundle, cited on delivery to outside counsel. CONTRACT.md sec 4.</description>
    <inlineHelpText>The reference used when a sealed bundle is delivered.</inlineHelpText>
    <type>AutoNumber</type>
    <displayFormat>EB-{0000}</displayFormat>
</CustomField>