force-app/main/default/objects/Evidence_Bundle__c/fields/Decision_Count__c.field-meta.xml
<CustomField>
    <fullName>Decision_Count__c</fullName>
    <label>Decision Count</label>
    <description>Number of decisions in the bundle, maintained as items are added.</description>
    <inlineHelpText>How many decisions this bundle contains.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>