force-app/main/default/objects/Evidence_Bundle__c/fields/Export_Format__c.field-meta.xml
<CustomField>
    <fullName>Export_Format__c</fullName>
    <label>Export Format</label>
    <description>The format the bundle was exported in, e.g. PDF or JSON.</description>
    <inlineHelpText>The file format used for this bundle's export.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>