force-app/main/default/objects/Evidence_Bundle__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <description>The matter or case this bundle serves, e.g. a discovery request or an audit.</description>
    <inlineHelpText>The legal or audit matter this bundle is assembled for.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>