force-app/main/default/objects/Evidence_Bundle__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <description>Why the bundle was assembled and who it is for.</description>
    <inlineHelpText>The stated purpose of this evidence bundle.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>