force-app/main/default/objects/Evidence_Bundle__c/fields/Range_End__c.field-meta.xml
<CustomField>
    <fullName>Range_End__c</fullName>
    <label>Range End</label>
    <description>End of the time range of decisions included in the bundle.</description>
    <inlineHelpText>The latest decision time covered by this bundle.</inlineHelpText>
    <type>DateTime</type>
</CustomField>