force-app/main/default/objects/Evidence_Bundle__c/fields/Range_Start__c.field-meta.xml
<CustomField>
    <fullName>Range_Start__c</fullName>
    <label>Range Start</label>
    <description>Start of the time range of decisions included in the bundle.</description>
    <inlineHelpText>The earliest decision time covered by this bundle.</inlineHelpText>
    <type>DateTime</type>
</CustomField>