force-app/main/default/objects/Evidence_Bundle__c/fields/Redaction_Profile__c.field-meta.xml
<CustomField>
    <fullName>Redaction_Profile__c</fullName>
    <label>Redaction Profile</label>
    <description>Which Evidence_Redaction_Rule__mdt profile was applied when the bundle was exported.</description>
    <inlineHelpText>The redaction profile applied to this bundle's export.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>