force-app/main/default/objects/Evidence_Bundle__c/fields/Sealed_At__c.field-meta.xml
<CustomField>
    <fullName>Sealed_At__c</fullName>
    <label>Sealed At</label>
    <description>When the bundle was sealed and its chain proof generated.</description>
    <inlineHelpText>The time this bundle was sealed.</inlineHelpText>
    <type>DateTime</type>
</CustomField>