force-app/main/default/objects/Evidence_Bundle__c/fields/Sealed_By__c.field-meta.xml
<CustomField>
    <fullName>Sealed_By__c</fullName>
    <label>Sealed By</label>
    <description>The custodian who sealed the bundle. Requires Evidence_Seal_Bundle.</description>
    <inlineHelpText>Who sealed this bundle.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Bundles Sealed</relationshipLabel>
    <relationshipName>Bundles_Sealed</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>