force-app/main/default/objects/Evidence_Bundle__c/fields/Segment_Root_Hash__c.field-meta.xml
<CustomField>
    <fullName>Segment_Root_Hash__c</fullName>
    <label>Segment Root Hash</label>
    <description>Root hash computed over the sealed chain segment, the proof that the segment existed in this state at seal time.</description>
    <inlineHelpText>The proof hash over the bundle's chain segment.</inlineHelpText>
    <type>Text</type>
    <length>128</length>
</CustomField>