force-app/main/default/objects/Evidence_Bundle__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <description>Lifecycle state of the bundle. Draft can be edited; Sealed is immutable with chain proof; Delivered has been handed over; Withdrawn revokes matter access.</description>
    <inlineHelpText>Bundle lifecycle: Draft, Sealed, Delivered, or Withdrawn.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Sealed</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>